--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "author": "JEngdahl",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@types/jest": "^26.0.19",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
