--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "module": "commonjs",
         "declaration": true,
         "outDir": "./dist",
-        "strict": true
+        "strict": true,
+        "lib": [
+            "es2019"
+        ]
     },
     "include": [
         "src"
